[Glitch] Fix line break in Read more button
Port 9bd151808c0280091a5794e27be7d0f0e4136711 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -1472,7 +1472,6 @@
 .status__content__translate-button {
   display: flex;
   align-items: center;
-  width: min-content;
   font-size: 15px;
   line-height: 22px;
   color: $highlight-text-color;
@@ -1481,6 +1480,14 @@
   padding: 0;
   margin-top: 16px;
   text-decoration: none;
+  text-wrap: nowrap;
+
+  .status--is-quote & {
+    // Needed to prevent buttons from stretching across whole
+    // status width in Safari due to line-clamp
+    width: min-content;
+    white-space: nowrap;
+  }
 
   &:hover,
   &:active {
